[maps][xs] fixed map tools css issue * toolbars on small maps now side-by-side not on top of each other

--- a/public/static/css/map.css
+++ b/public/static/css/map.css
@@ -2785,7 +2785,6 @@ textarea {
 @media (max-width: 568px) {
   .cgr-vis.cgr-vis-choropleth .cgr-vis-meta .cgr-vis-tools {
     font-size: 12px;
-    width: 150px;
   }
 }
 .cgr-vis.cgr-vis-choropleth .cgr-vis-meta .cgr-vis-share-embed {
